--- a/inicio.html
+++ b/inicio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Sobre</title>
+    <title>Qquestão</title>
 </head>
 <body>
     
@@ -52,6 +52,19 @@
         </div>
 
     </header>
+
+    <div class="areaSenha">
+
+        <h2>Avisos</h2> <br>
+        <p>verção deste site 1.0.0.1 (BETA)</p>
+
+        <div class="avisos">
+            <p>
+                O site encontra-se em manutenção para configuração de DB e autorizações de usuários, o mesmo está sem previsão para normalização.
+            </p>
+        </div>
+
+    </div>
 
     <script src="appQuet.js"></script>
 </body>
