--- a/Ajuda.html
+++ b/Ajuda.html
@@ -46,25 +46,27 @@
                     <li><a href="#">Sobre</a></li>
                     <li><a href="#">Termos de uso</a></li>
                     <li><a href="#">Dúvidas</a></li>
-                    <li><a href="Ajuda.html">Ajuda</a></li>
+                    <li><a href="#">Ajuda</a></li>
                 </ul>
             </nav>
         </div>
 
     </header>
 
-    <div class="areaSenha">
+    <div class="tTitulos">
 
-        <h2>Avisos</h2> <br>
-        <p>verção deste site 1.0.0.1 (BETA)</p>
+        <h3>Ajuda</h3>
 
-        <div class="avisos">
-            <p>
-                O site encontra-se em manutenção para configuração de DB e autorizações de usuários, o mesmo está sem previsão para normalização.
-            </p>
-        </div>
+        <button id="btnPadrao">ADICIONAR</button>
 
     </div>
+
+        <div class="buscar">
+            <input type="text" name="bBusca" id="bbusca" placeholder="Pesquisar usuário">
+            <button id="btnBusca"><img src="img/lupa.svg" width="10px"></button>
+        </div>
+
+    
 
     <script src="appQuet.js"></script>
 </body>
