adicionando novas paginas

--- a/013Sobre.html
+++ b/013Sobre.html
@@ -34,19 +34,19 @@
                 <ul>
                     <li><a href="#">Questões</a></li>
                     <li><a href="#">Simulados</a></li>
-                    <li><a href="#">Usuários</a></li>
-                    <li><a href="#">Comentários</a></li>
-                    <li><a href="#">Notificações</a></li>
-                    <li><a href="#">Assinantes (Ecommerce)</a></li>
-                    <li><a href="#">Guias</a></li>
-                    <li><a href="#">Mapas</a></li>
-                    <li><a href="#">Grupos</a></li>
-                    <li><a href="#">Planos</a></li>
-                    <li><a href="#">Banner</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Termos de uso</a></li>
-                    <li><a href="#">Dúvidas</a></li>
-                    <li><a href="#">Ajuda</a></li>
+                    <li><a href="004Usuarios.html">Usuários</a></li>
+                    <li><a href="005Comentarios.html">Comentários</a></li>
+                    <li><a href="006Notificacao.html">Notificações</a></li>
+                    <li><a href="007Assinantes.html">Assinantes (Ecommerce)</a></li>
+                    <li><a href="008Guias.html">Guias</a></li>
+                    <li><a href="009Maps.html">Mapas</a></li>
+                    <li><a href="010Grupos.html">Grupos</a></li>
+                    <li><a href="011Planos.html">Planos</a></li>
+                    <li><a href="012Banner.html">Banner</a></li>
+                    <li><a href="013Sobre.html">Sobre</a></li>
+                    <li><a href="014Termos.html">Termos de uso</a></li>
+                    <li><a href="015Duvidas.html">Dúvidas</a></li>
+                    <li><a href="016Ajuda.html">Ajuda</a></li>
                 </ul>
             </nav>
         </div>
@@ -55,7 +55,7 @@
 
     <div class="tTitulos">
 
-        <h3>Ajuda</h3>
+        <h3>Sobre</h3>
 
         <button id="btnPadrao">ADICIONAR</button>
 
