--- a/012Banner.html
+++ b/012Banner.html
@@ -32,15 +32,7 @@
         <div id="opcsMenu">
             <nav>
                 <ul>
-                    <li><a onclick="chamaQues()" href="#">Questões</a></li>
-                    <div class="questoes" id="questoes">
-                        <ul>
-                            <p>Todas as questões</p>
-                            <li><a href="003Disciplina.html">Disciplina/Assunto</a></li>
-                            <li><a href="#">Banca</a></li>
-                            <li><a href="#">Órgão</a></li>
-                        </ul>
-                    </div>
+                    <li><a href="#">Questões</a></li>
                     <li><a href="#">Simulados</a></li>
                     <li><a href="004Usuarios.html">Usuários</a></li>
                     <li><a href="005Comentarios.html">Comentários</a></li>
@@ -61,18 +53,20 @@
 
     </header>
 
-    <div class="areaSenha">
+    <div class="tTitulos">
 
-        <h2>Avisos</h2> <br>
-        <p>verção deste site 1.0.0.1 (BETA)</p>
+        <h3>Banner</h3>
 
-        <div class="avisos">
-            <p>
-                O site encontra-se em manutenção para configuração de DB e autorizações de usuários, o mesmo está sem previsão para normalização.
-            </p>
-        </div>
+        <button id="btnPadrao">ADICIONAR</button>
 
     </div>
+
+        <div class="buscar">
+            <input type="text" name="bBusca" id="bbusca" placeholder="Pesquisar usuário">
+            <button id="btnBusca"><img src="img/lupa.svg" width="10px"></button>
+        </div>
+
+    
 
     <script src="appQuet.js"></script>
 </body>
