--- a/009Maps.html
+++ b/009Maps.html
@@ -32,7 +32,15 @@
         <div id="opcsMenu">
             <nav>
                 <ul>
-                    <li><a href="#">Questões</a></li>
+                    <li><a onclick="chamaQues()" href="#">Questões</a></li>
+                    <div class="questoes" id="questoes">
+                        <ul>
+                            <p>Todas as questões</p>
+                            <li><a href="003Disciplina.html">Disciplina/Assunto</a></li>
+                            <li><a href="#">Banca</a></li>
+                            <li><a href="#">Órgão</a></li>
+                        </ul>
+                    </div>
                     <li><a href="#">Simulados</a></li>
                     <li><a href="004Usuarios.html">Usuários</a></li>
                     <li><a href="005Comentarios.html">Comentários</a></li>
