--- a/016Ajuda.html
+++ b/016Ajuda.html
@@ -32,19 +32,27 @@
         <div id="opcsMenu">
             <nav>
                 <ul>
-                    <li><a href="#">Questões</a></li>
+                    <li><a onclick="chamaQues()" href="#">Questões</a></li>
+                    <div class="questoes" id="questoes">
+                        <ul>
+                            <p>Todas as questões</p>
+                            <li><a href="003Disciplina.html">Disciplina/Assunto</a></li>
+                            <li><a href="#">Banca</a></li>
+                            <li><a href="#">Órgão</a></li>
+                        </ul>
+                    </div>
                     <li><a href="#">Simulados</a></li>
-                    <li><a href="#">Usuários</a></li>
-                    <li><a href="#">Comentários</a></li>
-                    <li><a href="#">Notificações</a></li>
-                    <li><a href="#">Assinantes (Ecommerce)</a></li>
-                    <li><a href="#">Guias</a></li>
-                    <li><a href="#">Mapas</a></li>
-                    <li><a href="#">Grupos</a></li>
-                    <li><a href="#">Planos</a></li>
-                    <li><a href="#">Banner</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Termos de uso</a></li>
+                    <li><a href="004Usuarios.html">Usuários</a></li>
+                    <li><a href="005Comentarios.html">Comentários</a></li>
+                    <li><a href="006Notificacao.html">Notificações</a></li>
+                    <li><a href="007Assinantes.html">Assinantes (Ecommerce)</a></li>
+                    <li><a href="008Guias.html">Guias</a></li>
+                    <li><a href="009Maps.html">Mapas</a></li>
+                    <li><a href="010Grupos.html">Grupos</a></li>
+                    <li><a href="011Planos.html">Planos</a></li>
+                    <li><a href="012Banner.html">Banner</a></li>
+                    <li><a href="013Sobre.html">Sobre</a></li>
+                    <li><a href="014Termos.html">Termos de uso</a></li>
                     <li><a href="015Duvidas.html">Dúvidas</a></li>
                     <li><a href="016Ajuda.html">Ajuda</a></li>
                 </ul>
