--- a/inicio.html
+++ b/inicio.html
@@ -74,6 +74,10 @@
 
     </div>
 
+    <p>em teste</p>
+    <a href="adcMultiplas.html">teste1</a>
+    <a href="adiciona.html">teste2</a>
+
     <script src="appQuet.js"></script>
 </body>
 </html>
